--- a/SASS/style.scss
+++ b/SASS/style.scss
@@ -79,7 +79,7 @@
                     justify-content: center;
                     align-items: center;
                     border-radius: 50%;
-                    margin-left: -1.7rem;
+                    margin-left: -1.5rem;
                     margin-right: 0.8rem;
                     font-size: 1.2rem;
     
@@ -245,7 +245,7 @@
                 justify-content: center;
                 align-items: center;
                 border-radius: 50%;
-                margin-left: -1.7rem;
+                margin-left: -1.5rem;
                 margin-right: 0.8rem;
                 font-size: 1.2rem;
             }
